# Postlude

./: README.md  package.yaml  postlude.cabal  stack.yaml
src/: Postlude.hs
src/Postlude/: Lazy.hs  Strict.hs
