name:                postlude
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/postlude#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Postlude
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring == 0.10.8.1,
                       either == 4.4.1.1,
                       mtl == 2.2.1,
                       text == 1.2.2.2,
                       transformers == 0.5.5.0
